# xmbot

./: .env.example  .gitignore  README.md  pyproject.toml
ambot/: __init__.py  config.py  exceptions.py  main.py  types.py
ambot/broker/: client.py  order_router.py  rate_limiter.py  vault.py
ambot/commissions/: calculator.py  snapshot.py  statement.py  watermark.py
ambot/core/: engine.py  persistence.py  scheduler.py  state.py
ambot/journal/: query.py  writer.py
ambot/reconciliation/: reconciler.py
ambot/risk/: checks.py  global_guard.py  per_client.py
ambot/social/: replicator.py  tier_dispatcher.py
ambot/strategies/: base.py  deterministic.py  signals.py
infra/: docker-compose.yml
infra/docker/: Dockerfile.ambot  Dockerfile.web
infra/nginx/: nginx.conf
infra/supervisord/: ambot_client.conf.tmpl  supervisord.conf
requirements/: base.txt  dev.txt
tests/: conftest.py
tests/integration/: test_commission_snapshot.py  test_engine_flow.py  test_reconciler.py
tests/unit/: test_commission_calculator.py  test_replicator.py  test_risk_checks.py  test_vault.py  test_watermark.py
web/: dependencies.py  main.py
web/routers/: admin.py  auth.py  clients.py  commissions.py  positions.py
